samples/_failures_safe/1761300351_16b166_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75a034dd.c:156:1: error: expected identifier or ‘(’ at end of input
  156 | int
      | ^~~
